--- a/package.json
+++ b/package.json
@@ -1,46 +1,28 @@
 {
-  "name": "<package_name>",
+  "name": "dev-endpoint",
   "version": "0.0.0",
-  "description": "",
+  "private": "true",
+  "description": "dev-point root",
   "keywords": [],
-  "homepage": "",
+  "homepage": "https://github.com/yuhang-dong/dev-endpoint",
   "bugs": {
-    "url": "",
-    "email": ""
+    "url": "https://github.com/yuhang-dong/dev-endpoint/issue",
+    "email": "dong_yu_hang@126.com"
   },
   "license": "MIT",
-  "author": "",
+  "author": "Elliot <dong_yu_hang@126.com> (https://github.com/yuhang-dong)",
   "files": [
     "dist"
   ],
-  "repository": "",
+  "repository": "github:yuhang-dong/dev-endpoint",
   "type": "module",
-  "types": "./dist/index.d.ts",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
-  },
+  "workspaces":["packages/*"],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "build-watch": "concurrently \"tsc --watch \" \"vite build --watch\"",
-    "version": "changeset version && pnpm install --no-frozen-lockfile",
-    "test-server": "node tests-context/startTestServer"
+    "build": "pnpm --filter endpoint-file-server run build && pnpm --filter vite-plugin-dev-endpoint run build",
+    "version": "pnpm --filter endpoint-file-server run version && pnpm --filter vite-plugin-dev-endpoint run version"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.26.0",
-    "@playwright/test": "^1.29.2",
-    "concurrently": "^7.6.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "concurrently": "^7.6.0"
   },
-  "packageManager": "pnpm@7.12.2",
-  "publishConfig": {
-    "access": "public"
-  }
+  "packageManager": "pnpm@7.12.2"
 }
