--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,10 +21,10 @@ jobs:
     - name: Install Playwright Browsers
       run: pnpm dlx playwright install --with-deps
     - name: Run Playwright tests
-      run: pnpm dlx playwright test
+      run: pnpm run test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: packages/**/playwright-report/
         retention-days: 30
