--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "workspaces":["packages/*"],
   "scripts": {
     "build": "pnpm --filter endpoint-file-server run build && pnpm --filter vite-plugin-dev-endpoint run build",
-    "version": "pnpm --filter endpoint-file-server run version && pnpm --filter vite-plugin-dev-endpoint run version"
+    "version": "pnpm --filter endpoint-file-server run version && pnpm --filter vite-plugin-dev-endpoint run version",
+    "test": "pnpm run build && pnpm --filter endpoint-file-server run test && pnpm --filter vite-plugin-dev-endpoint run test"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
-    "@changesets/cli": "^2.26.0"
+    "@changesets/cli": "^2.26.0",
+    "typescript": "^4.9.3",
+    "@playwright/test": "^1.29.2"
   },
   "packageManager": "pnpm@7.12.2"
 }
