--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "build": "pnpm --filter endpoint-file-server run build && pnpm --filter vite-plugin-dev-endpoint run build",
     "version": "changeset version && pnpm install --no-frozen-lockfile",
-    "test": "pnpm run build && pnpm --filter endpoint-file-server run test && pnpm --filter vite-plugin-dev-endpoint run test"
+    "test": "pnpm --filter endpoint-file-server run test && pnpm --filter vite-plugin-dev-endpoint run test"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
