--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   ],
   "repository": "github:yuhang-dong/dev-endpoint",
   "type": "module",
-  "workspaces":["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "pnpm --filter endpoint-file-server run build && pnpm --filter vite-plugin-dev-endpoint run build",
     "version": "changeset version && pnpm install --no-frozen-lockfile",
-    "test": "pnpm --filter endpoint-file-server run test && pnpm --filter vite-plugin-dev-endpoint run test"
+    "test": "pnpm run build && pnpm --filter endpoint-file-server run test && pnpm --filter vite-plugin-dev-endpoint run test"
   },
   "devDependencies": {
-    "concurrently": "^7.6.0",
     "@changesets/cli": "^2.26.0",
+    "@playwright/test": "^1.29.2",
+    "concurrently": "^7.6.0",
     "typescript": "^4.9.3",
-    "@playwright/test": "^1.29.2"
+    "unbuild": "^1.1.1"
   },
   "packageManager": "pnpm@7.12.2"
 }
